--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Luke Evans Portfolio</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <iframe width="0" height="0" src="https://youtuberepeater.com/watch?v=5zjgK1LfFmE#gsc.tab=0" frameborder="0" allowfullscreen></iframe>
     <link rel="stylesheet" href="./assets/css/style.css">
 
 </head>
@@ -36,7 +35,6 @@
                     </ul>
                 </div>
             </section>
-        </nav>
         </nav>
         <div class="container" style="width: 18rem;">
             <form class="col-lg-12 col-md-12 border">
@@ -73,6 +71,7 @@
             <p>
                 &copy;Copyright Luke Evans
             </p>
+            <iframe width="0" height="0" src="https://www.youtuberepeater.com/watch?v=5zjgK1LfFmE#gsc.tab=0" frameborder="0" allowfullscreen></iframe>
         </footer>
 </body>
 
