--- a/portfolio.html
+++ b/portfolio.html
@@ -6,9 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <iframe width="0" height="0" src="https://youtuberepeater.com/watch?v=5zjgK1LfFmE#gsc.tab=0" frameborder="0" allowfullscreen></iframe>
     <link rel="stylesheet" href="./assets/css/style.css">
-
 </head>
 
 <body>
@@ -16,11 +14,11 @@
         <video autoplay loop class="meteorengine" muted plays-inline>
             <source src="assets/images/meteorengine.mp4" type="video/mp4">
         </video>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary top">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary top border-bottom">
             <h2 class="lukeevans">Luke Evans</h2>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+                    <span class="navbar-toggler-icon"></span>
+                </button>
             <section>
                 <div class="collapse navbar-collapse" id="navbarText">
                     <ul class="navbar-nav ml-auto">
@@ -37,51 +35,50 @@
                 </div>
             </section>
         </nav>
-        <section class="container">
-            <form class="container border border-dark mb-2">
-                <div class="row">
-                    <div class="col-lg-12 col-md-12">
-                        <div class="page-header border-bottom">
-                            <h1 class="subheading m-2"> Portfolio</h1>
-                            <div class="d-flex m-2">
+
+        <form class="container border-dark mb-2">
+            <div class="row">
+                <div class="col-lg-12 col-md-12">
+                    <div class="page-header border-bottom">
+                        <h1 class="subheading m-2"> Portfolio</h1>
+                        <div class="d-flex m-2">
+                        </div>
+                    </div>
+                    <div class="row justify-content-center">
+                        <div class="card bg-clear text-dark" style="width:18rem;">
+                            <img class="card-img" src="assets/images/placeholder150.png" alt="Example #1">
+                            <div class="card-img-overlay d-flex flex-column justify-content-left">
+                                <h4 class="card title text-center">Example #1</h4>
                             </div>
                         </div>
-                        <div class="row justify-content-center">
-                            <div class="card bg-clear text-dark" style="width:18rem;">
-                                <img class="card-img" src="assets/images/placeholder150.png" alt="Example #1">
-                                <div class="card-img-overlay d-flex flex-column justify-content-left">
-                                    <h4 class="card title text-center">Example #1</h4>
-                                </div>
+                        <div class="card bg-clear text-dark" style="width:18rem;">
+                            <img class="card-img" src="assets/images/placeholder150.png" alt="Example #2">
+                            <div class="card-img-overlay d-flex flex-column justify-content-left">
+                                <h4 class="card title text-center">Example #2</h4>
                             </div>
-                            <div class="card bg-clear text-dark" style="width:18rem;">
-                                <img class="card-img" src="assets/images/placeholder150.png" alt="Example #2">
-                                <div class="card-img-overlay d-flex flex-column justify-content-left">
-                                    <h4 class="card title text-center">Example #2</h4>
-                                </div>
+                        </div>
+                        <div class="card bg-clear text-dark" style="width:18rem;">
+                            <img class="card-img" src="assets/images/placeholder150.png" alt="Example #3">
+                            <div class="card-img-overlay d-flex flex-column justify-content-left">
+                                <h4 class="card title text-center">Example #3</h4>
                             </div>
-                            <div class="card bg-clear text-dark" style="width:18rem;">
-                                <img class="card-img" src="assets/images/placeholder150.png" alt="Example #3">
-                                <div class="card-img-overlay d-flex flex-column justify-content-left">
-                                    <h4 class="card title text-center">Example #3</h4>
-                                </div>
+                        </div>
+                        <div class="card bg-clear text-dark" style="width:18rem;">
+                            <img class="card-img" src="assets/images/placeholder150.png" alt="Example #4">
+                            <div class="card-img-overlay d-flex flex-column justify-content-left">
+                                <h4 class="card title text-center">Example #4</h4>
                             </div>
-                            <div class="card bg-clear text-dark" style="width:18rem;">
-                                <img class="card-img" src="assets/images/placeholder150.png" alt="Example #4">
-                                <div class="card-img-overlay d-flex flex-column justify-content-left">
-                                    <h4 class="card title text-center">Example #4</h4>
-                                </div>
-                            </div>
-                            <div class="card bg-clear text-dark" style="width:18rem;">
-                                <img class="card-img" src="assets/images/placeholder150.png" alt="Example #5">
-                                <div class="card-img-overlay d-flex flex-column justify-content-left">
-                                    <h4 class="card title text-center">Example #5</h4>
-                                </div>
+                        </div>
+                        <div class="card bg-clear text-dark" style="width:18rem;">
+                            <img class="card-img" src="assets/images/placeholder150.png" alt="Example #5">
+                            <div class="card-img-overlay d-flex flex-column justify-content-left">
+                                <h4 class="card title text-center">Example #5</h4>
                             </div>
                         </div>
                     </div>
                 </div>
-            </form>
-        </section>
+            </div>
+        </form>
     </section>
 
 
@@ -89,7 +86,8 @@
         <p>
             &copy;Copyright Luke Evans
         </p>
-
+        <iframe width="0" height="0" src="https://youtuberepeater.com/watch?v=5zjgK1LfFmE#gsc.tab=0" frameborder="0" allowfullscreen></iframe>
+        <link rel="stylesheet" href="./assets/css/style.css">
     </footer>
 </body>
 
